clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__pipelines__parse_multi_stage_pipe.snap
---
source: clash-brush-parser/src/parser/tests/pipelines.rs
assertion_line: 22
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "cat file | grep pattern | wc -l",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "cat",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "file",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "grep",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "pattern",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "wc",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-l",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
