clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__pipelines__parse_pipe_with_multiple_commands.snap
---
source: clash-brush-parser/src/parser/tests/pipelines.rs
assertion_line: 88
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "ls -la | head -10 | tail -5",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "ls",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-la",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "head",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-10",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "tail",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-5",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
