clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__pipelines__parse_simple_pipe.snap
---
source: clash-brush-parser/src/parser/tests/pipelines.rs
assertion_line: 11
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "echo hello | grep world",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                ])),
              )),
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "grep",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "world",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
