clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__pipelines__parse_timed_pipeline_posix.snap
---
source: clash-brush-parser/src/parser/tests/pipelines.rs
assertion_line: 55
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "time -p echo hello",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            timed: Some(TimedWithPosixOutput(SourceSpan(
              start: SourcePosition(
                index: 0,
                line: 1,
                column: 1,
              ),
              end: SourcePosition(
                index: 7,
                line: 1,
                column: 8,
              ),
            ))),
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "hello",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
